2005-05-09    <mschimek@users.sf.net>

	* backup.sh: Remove twiki diffs when done.

2005-03-30    <mschimek@users.sf.net>

	* cgi-bin/register (main): Modified form input names to confuse spam
	  bots.

Local Variables:
mode: change-log
coding: utf-8
left-margin: 8
fill-column: 76
End: