@@ -1,6 +1,6 @@
 # TWiki Collaboration Platform, http://TWiki.org/
 #
-# Copyright (C) 2002-2003 Peter Thoeny, peter@thoeny.com
+# Copyright (C) 2002-2004 Peter Thoeny, peter@thoeny.com
 #
 # For licensing info read license.txt file in the TWiki root.
 # This program is free software; you can redistribute it and/or
@@ -19,14 +19,30 @@
 # Used to configure non-standard locations for TWiki and Perl modules.
 
 
+# -------------- Only needed to work around an Apache 2.0 bug on Unix
+#
+#    If you are running TWiki on Apache 2.0 on Unix you might experience cgi
+#    scripts to hang forever. This is a known Apache 2.0 bug. A fix is 
+#    available at http://issues.apache.org/bugzilla/show_bug.cgi?id=%2022030.
+#    It is recommended to patch your Apache installation.
+#
+#    As a workaround, uncomment one of the following two lines. (As a drawback,
+#    errors will not be reported anymore to the browser via CGI::Carp)
+
+# open(STDERR, ">>/dev/null");         # throw away cgi script errors, or
+# open(STDERR, ">>/tmp/error.log");    # redirect errors to a log file of choice
+
+
 # -------------- Change these settings if required
 
-#    Path to lib directory containing TWiki.pm. Set to absolute file path:
+#    Path to lib directory containing TWiki.pm.
+#    ATTENTION: Set to absolute file path:
 $twikiLibPath = '../lib';
 
 #    Path to local Perl modules (e.g. under home directory for users
 #    without 'root' on Unix/Linux). Uncomment and set if needed:
 # $localPerlLibPath = '';
+
 
 # -------------- Don't change anything below this line
 
